--- a/cvslvk.lyx
+++ b/cvslvk.lyx
@@ -1,4 +1,4 @@
-#This file was created by <nikita> Mon Nov 15 19:10:05 1999
+#This file was created by <nikita> Fri Dec  3 17:58:16 1999
 #LyX 0.12 (C) 1995-1998 Matthias Ettrich and the LyX Team
 \lyxformat 2.15
 \textclass article
@@ -39,7 +39,7 @@
 \newline 
 
 \emph on 
-последнее изменение в этот документ внесено 15.11.1999
+последнее изменение в этот документ внесено 3.12.1999
 \newline 
 
 \layout Section
@@ -124,7 +124,8 @@ make
 Система обеспечивает мощный механизм управления зависимостями между модулями.
  Для использования внешнего модуля достаточно только указать его имя.
  Система автоматически выберет нужную версию каждого из используемых модулей
- и корректно ее подключит.
+ и корректно ее подключит: автоматически осуществит пересборку при изменениях
+ в используемых модулях.
 \layout Itemize
 
 Свойства каждого модуля описываются при помощи привязанного к нему включаемого
@@ -224,6 +225,18 @@ tornado
 /usr/local/builds
 \family default 
 .
+\begin_float footnote 
+\layout Standard
+
+Возможна также инсталляция системы в домашние каталоги пользователей, при
+ этом там могут быть как файлы системы, так и символьные ссылки на эти файлы
+ в 
+\family typewriter 
+/usr/local/builds
+\family default 
+.
+\end_float 
+ 
 \layout Section
 
 Простейшее использование
@@ -322,6 +335,30 @@ global.h
  Легко видеть, что именно такие перетрансляции необходимы в данном случае.
  Однако, явно они нигде не указывались.
  Зависимости в системе CVSLVK вычисляются автоматически.
+\layout Itemize
+
+По команде 
+\family typewriter 
+make clean
+\family default 
+ будут удалены все файлы, созданные в процессе сборки.
+\layout Itemize
+
+По команде 
+\family typewriter 
+make
+\protected_separator 
+CL_OPTIMIZE=1
+\family default 
+ будет осуществлена компиляция с оптимизацией.
+ При этом объектные файлы с отладочной информацией, созданные ранее, удалены
+ не будут.
+ Соответственно, в дальнейшем при продолжении отладки не придется все перетрансл
+ировать.
+\layout Standard
+
+Все файлы, созданные в процессе сборки, будут помещены в подкаталог.
+ Имя этого подкаталога составля
 \layout Section
 
 Пользовательский справочник
@@ -333,133 +370,5 @@ global.h
 Техническое описание системы
 \layout Section
 
-Простейшее использование
-\layout Standard
-
-Пользовательский 
-\family typewriter 
-Makefile
-\family default 
- для сборки программы (в т.ч.
- модели на DYANA) устроен следующим образом:
-\layout LyX-Code
-
-CL_USE_MODULES = <список используемых модулей>
-\layout LyX-Code
-
-EXECUTABLE = <имя>
-\layout LyX-Code
-
-SOURCES = <список файлов>
-\layout LyX-Code
-
-<Возможно, определения других переменных>
-\layout LyX-Code
-
-include $(CL_DIR)/Makefile.cvslvk
-\layout Standard
-
-В переменной 
-\family typewriter 
-SOURCES
-\family default 
- указываются все исходные файлы (на Си, Cи++ и mm-языке, можно перемешивать).
- Однако, сейчас все файлы должны быть в текущем каталоге.
-\layout Standard
-
-
-\family typewriter 
-EXECUTABLE
-\family default 
- -- имя результирующего исполняемого файла.
-\layout Standard
-
-
-\family typewriter 
-CL_USE_MODULES
-\family default 
- -- список используемых модулей.
- Если никакие модули не используются, эту переменную определять не надо.
-\newline 
-Модули разделяются пробелами.
- Ссылка на каждый модуль содержит до трех частей, разделенных символом подчеркив
-ания.
- Первое поле -- имя модуля.
- Второе -- имя версии (если его нет или это 
-\family typewriter 
-any
-\family default 
-, значит годится любая версия).
- Третье поле -- дополнительные параметры -- строки разделенные дефисами
- -- обычно не нужны.
-\newline 
-Для моделей на mm-языке должно быть 
-\begin_inset Quotes eld
-\end_inset 
-
-
-\family typewriter 
-CL_USE_MODULES
-\protected_separator 
-=
-\protected_separator 
-mmt libmon
-\family default 
-
-\begin_inset Quotes erd
-\end_inset 
-
-
-\layout Standard
-
-Простейший сервис:
-\layout Itemize
-
-
-\family typewriter 
-make
-\family default 
- (без параметров) произведет сборку исполняемого файла 
-\family typewriter 
-EXECUTABLE
-\family default 
- (при этом все будет собрано в некотором подкаталоге, а из текущего каталога
- будет проставлена ссылка туда);
-\layout Itemize
-
-
-\family typewriter 
-make clean
-\family default 
- удалит все файлы, созданные при 
-\family typewriter 
-make
-\family default 
-;
-\layout Itemize
-
-при повторных запусках make автоматически будут пересобираться те и только
- те файлы, которые требуют этого;
-\layout Itemize
-
-по умолчанию исполняемый файл будет готов к отладке (т.е.
- собран с отладочной информацией и без оптимизаций)
-\layout Standard
-
-Весь остальной сервис доступен через определение переменных.
-\layout Section
-
-Переменные
-\layout Standard
-
-Переменные можно определять внутри Makefile-а, в командной строке make-а,
- в окружении.
-\layout Standard
-
-Документация по переменным доступна в виде комментариев в файле 
-\family typewriter 
-$CL_DIR/Makefile.cvslvk
-\layout Section
-
-Создание своего модуля
+Известные ошибки и недоработки
 \the_end
