--- a/cvslvk.lyx
+++ b/cvslvk.lyx
@@ -1,4 +1,4 @@
-#This file was created by <nikita> Sun Dec  5 01:07:20 1999
+#This file was created by <nikita> Fri Dec 10 18:16:47 1999
 #LyX 0.12 (C) 1995-1998 Matthias Ettrich and the LyX Team
 \lyxformat 2.15
 \textclass article
@@ -19,7 +19,7 @@
 \use_geometry 0
 \use_amsmath 0
 \paperorientation portrait
-\secnumdepth 2
+\secnumdepth 3
 \tocdepth 3
 \paragraph_separation skip
 \defskip medskip
@@ -33,13 +33,13 @@
 \line_top \line_bottom \align center 
 
 \size huge 
-Система CVSLVK
+Система cvslvk
 \size default 
 
 \newline 
 
 \emph on 
-последнее изменение в этот документ внесено 4.12.1999
+последнее изменение в этот документ внесено 9.12.1999
 \newline 
 
 \newline 
@@ -49,7 +49,7 @@
 Обзор возможностей системы
 \layout Standard
 
-Система CVSLVK предназначена для автоматизации процесса сборки программ
+Система cvslvk предназначена для автоматизации процесса сборки программ
  в процессе их разработки и отладки.
  
 \layout Standard
@@ -57,7 +57,7 @@
 Целью разработки системы было максимальное упрощение действий пользователя
  по сборке программ в среде UNIX и снижение вероятности ошибок сборки, не
  диагностируемых стандартными средствами сборки.
- Вместе с системой управления версиями CVS система CVSLVK позволяет избежать
+ Вместе с системой управления версиями CVS система cvslvk позволяет избежать
  большинства стандартных проблем, возникающих при совместной разработке
  нескольких взаимозависимых модулей несколькими разработчиками в сети, в
  состав которой входят машины с различной архитектурой и различными версиями
@@ -70,7 +70,7 @@
 \end_float 
 \layout Standard
 
-Ниже перечисляются основные возможности системы CVSLVK.
+Ниже перечисляются основные возможности системы cvslvk.
 \layout Itemize
 
 В большинстве случаев для сборки исполняемого модуля достаточно просто указать
@@ -165,10 +165,10 @@ make
 Требования
 \layout Standard
 
-Система CVSLVK имеет следующие требования:
+Система cvslvk имеет следующие требования:
 \layout Enumerate
 
-Система CVSLVK работает ТОЛЬКО с 
+Система cvslvk работает ТОЛЬКО с 
 \family typewriter 
 GNU make
 \family default 
@@ -338,7 +338,7 @@ global.h
  будут перетранслированы оба Си-файла.
  Легко видеть, что именно такие перетрансляции необходимы в данном случае.
  Однако, явно они нигде не указывались.
- Зависимости в системе CVSLVK вычисляются автоматически.
+ Зависимости в системе cvslvk вычисляются автоматически.
 \layout Itemize
 
 По команде 
@@ -387,7 +387,7 @@ CL_COMP=suncc
 \emph toggle 
 .
  Имя подкаталога сборки составляется из имени архитектуры, названия операционной
- системы и параметров сборки.
+ системы и параметров сборки (предопределенных и определяемых пользователем).
  Так, если осуществлять сборку рассматриваемого примера на сервере 
 \family typewriter 
 redsun
@@ -406,7 +406,7 @@ sparc-solaris-optimized/
 \layout Standard
 
 Собранный исполняемый файл создается в подкаталоге сборки, а в основной
- каталог проекта помещается символьная ссылка на исполняемый файл.
+ каталог помещается символьная ссылка на исполняемый файл.
 \layout Standard
 
 Команда 
@@ -458,6 +458,198 @@ cleanall
 \layout Section
 
 Пользовательский справочник
+\layout Standard
+
+В данном разделе дается полное описание 
+\emph on 
+интерфейса
+\emph toggle 
+ системы cvslvk.
+ Под интерфейом понимается набор команд и параметров, используемых при работе
+ с системой.
+ 
+\layout Subsection
+
+Расположение файлов
+\layout Standard
+
+Система cvslvk накладывает определенные требования на расположение файлов
+ пользователя.
+\begin_float footnote 
+\layout Standard
+
+Возможно, со временем эти требования будут ослаблены.
+ Сейчас их при необходимости можно обеспечить при помощи символических ссылок.
+\end_float 
+\layout Standard
+
+Базовым понятием системы является 
+\emph on 
+рабочий каталог
+\emph toggle 
+.
+ В одном рабочем каталоги располагаются файлы, из которых собирается одна
+ программа или одна библиотека.
+ Также в рабочем каталоге должен быть файл с именем 
+\family typewriter 
+Makefile
+\family default 
+ или 
+\family typewriter 
+makefile
+\family default 
+, содержащий инструкции по сборке.
+ Называть этот файл по-другому и пользоваться ключем 
+\family typewriter 
+-f
+\family default 
+ программы 
+\family typewriter 
+make
+\family default 
+ в текущей версии системы не рекомендуется.
+\layout Standard
+
+При сборке проекта в рабочем каталоге создается 
+\emph on 
+каталог сборки
+\emph toggle 
+, в который помещаются все создаваемые файлы.
+ К создаваемым файлам относятся файлы с описанием зависимостей (
+\family typewriter 
+*.deps
+\family default 
+), объектные файлы, создаваемый исполняемый файл или библиотека, служебные
+ файлы системы CVSLVK, и файлы, создаваемые используемыми модулями
+\begin_float footnote 
+\layout Standard
+
+Например, модуль -- средство создания парсера по грамматике поместит в каталог
+ сборки созданный код на языке Си или Си++.
+\end_float 
+.
+\layout Standard
+
+Имя каталога сборки представляет из себя резделенные символом 
+\begin_inset Quotes eld
+\end_inset 
+
+
+\family typewriter 
+-
+\family default 
+
+\begin_inset Quotes erd
+\end_inset 
+
+ параметры сборки.
+ К параметрам относятся архитектура и операционная система машины, для которой
+ осуществлялась сборка, отладочная это сборка или оптимизированная, возможно
+ компилятор, возможно тип библиотеки (статическая или разделяемая), возможны
+ любые пользовательские параметры.
+ 
+\layout Standard
+
+При изменении параметров сборки создаваемые файлы будут помещены в новый
+ каталог сборки.
+ Одновременно в рабочем каталоге может быть несколько каталогов сборки.
+ Это позволяет избежать лишних перетрансляций при переходе от одних параметров
+ сборки к другим и обратно.
+\layout Standard
+
+В рабочем каталоге могут быть также подкаталоги c той же структурой, что
+ и сам рабочий каталог.
+ В таком подкаталоге будут находиться все исходные файлы некоторой другой
+ программы или библиотеки.
+ Например, если некоторый проект представляет из себя библиотеку и тестирующую
+ программу, то в основном каталоге проекта будут файлы, из которых собирается
+ библиотека, а в подкаталоге -- тестирующая программа.
+\layout Standard
+
+В рабочем каталоге может не быть ничего кроме таких подкаталогов (и состоящего
+ из двух строк 
+\family typewriter 
+Makefile
+\family default 
+-а, указывающего, что сборка этого каталога сводится к сборке подкаталогов).
+ Такая структура предназначена для ситуации, когда проект состоит из нескольких
+ программ.
+\layout Subsection
+
+Основная операция -- сборка каталога
+\layout Standard
+
+Основной операцией системы cvslvk является 
+\emph on 
+сборка каталога
+\emph toggle 
+.
+ 
+\layout Standard
+
+Действия, выполняемые по этой операции, формально совпадают с действиями
+ стандартной утилиты 
+\family typewriter 
+make
+\family default 
+.
+ А именно, определяется последовательность операций, которую необходимо
+ выполнить для обновления 
+\emph on 
+цели
+\emph toggle 
+ (в данном случае -- программы или библиотеки, собираемой в данном каталоге),
+ после чего эта последовательность выполняется.
+\layout Standard
+
+Отличие от стандартной утилиты 
+\family typewriter 
+make
+\family default 
+ заключается в уровне входного языка.
+ Система cvslvk является надстройкой над 
+\family typewriter 
+make
+\family default 
+, которая скрывает технические детали стандартных операций.
+ Можно рассматривать ее как развитие идеи неявных правил 
+\family typewriter 
+make
+\family default 
+.
+\layout Standard
+
+Сборка каталога вызывается командой 
+\family typewriter 
+make
+\family default 
+.
+ Параметрами команды 
+\family typewriter 
+make
+\family default 
+ могут быть параметры сборки.
+ Они задаются как переменные 
+\family typewriter 
+make
+\family default 
+: 
+\family typewriter 
+<имя>=<значение>
+\family default 
+.
+\begin_float footnote 
+\layout Standard
+
+Параметры сборки также могут быть переданы через переменные окружения.
+\end_float 
+ Например, команда 
+\family typewriter 
+make
+\protected_separator 
+CL_OPTIMIZE=1
+\family default 
+ запустит сборку с оптимизацией.
 \layout Section
 
 Сообщения об ошибках
