--- a/cvslvk.lyx
+++ b/cvslvk.lyx
@@ -1,4 +1,4 @@
-#This file was created by <nikita> Fri Dec 10 18:16:47 1999
+#This file was created by <nikita> Tue Dec 14 20:09:29 1999
 #LyX 0.12 (C) 1995-1998 Matthias Ettrich and the LyX Team
 \lyxformat 2.15
 \textclass article
@@ -39,7 +39,7 @@
 \newline 
 
 \emph on 
-последнее изменение в этот документ внесено 9.12.1999
+последнее изменение в этот документ внесено 14.12.1999
 \newline 
 
 \newline 
@@ -75,7 +75,11 @@
 
 В большинстве случаев для сборки исполняемого модуля достаточно просто указать
  его имя и перечислить файлы исходных текстов.
- Размер пользовательского Makefile-а составляет при этом всего 3 строки.
+ Размер пользовательского 
+\family typewriter 
+Makefile
+\family default 
+-а составляет при этом всего 3 строки.
 \layout Itemize
 
 Система обеспечивает автоматическое отслеживание зависимостей файлов между
@@ -107,7 +111,11 @@ make
 \layout Itemize
 
 Система предоставляет простой (сводящийся к установке единственной переменной
- в Makefile-ах) механизм контроля необходимых переменных среды.
+ в 
+\family typewriter 
+Makefile
+\family default 
+-ах) механизм контроля необходимых переменных среды.
  Если корректная работа модуля зависит от переменных среды, работа продолжится
  только после корректной их установки.
 \layout Itemize
@@ -132,8 +140,12 @@ make
 \layout Standard
 
 Свойства каждого модуля описываются при помощи привязанного к нему включаемого
- Makefile-а, синтаксис которого предоставляет очень широкие возможности
- по определению семантики модуля.
+ 
+\family typewriter 
+Makefile
+\family default 
+-а, синтаксис которого предоставляет очень широкие возможности по определению
+ семантики модуля.
  В результате внешним модулем может быть библиотека, средство генерации
  исходных текстов по грамматике, вся среда DYANA и т.д., причем прозрачно
  для пользователя.
@@ -151,13 +163,21 @@ make
  В частности, пользователю следует хорошо понимать, из каких этапов состоит
  сборка исполняемого файла из исходных текстов и какие преобразования файлов
  при этом имеют место.
- Также следует представлять алгоритм работу утилиты make и синтаксис Makefile-ов.
+ Также следует представлять алгоритм работу утилиты make и синтаксис 
+\family typewriter 
+Makefile
+\family default 
+-ов.
 \begin_float footnote 
 \layout Standard
 
 Если пользователь хочет автоматизировать более сложные процессы, для которых
- стандартный синтаксис Makefile-а недостаточен, то следует изучить расширенный
- синтаксис GNU make, который и был использован для написания системы CVSLVK
+ стандартный синтаксис 
+\family typewriter 
+Makefile
+\family default 
+-а недостаточен, то следует изучить расширенный синтаксис GNU make, который
+ и был использован для написания системы CVSLVK
 \end_float 
  
 \layout Section
@@ -280,7 +300,11 @@ lib.h
 lib.c
 \family default 
 .
- В этом случае Makefile будет иметь следующий вид:
+ В этом случае 
+\family typewriter 
+Makefile
+\family default 
+ будет иметь следующий вид:
 \layout LyX-Code
 
 EXECUTABLE = myprogram
@@ -650,6 +674,97 @@ make
 CL_OPTIMIZE=1
 \family default 
  запустит сборку с оптимизацией.
+\layout Standard
+
+При сборке каталога выполняются, как минимум, следующие действия:
+\layout Itemize
+
+пересчитываются зависимости для всех файлов, для которых они могли измениться,
+\layout Itemize
+
+перетранслируются файлы,
+\layout Itemize
+
+пересобирается цель.
+\layout Subsection
+
+Параметры сборки каталога
+\layout Standard
+
+Сборка каталога управляется набором параметров.
+ Параметры могут быть заданы в командной строке, в 
+\family typewriter 
+Makefile
+\family default 
+-е, в переменных окружения.
+ Параметры, заданные в командной строке, имеют больший приоритет, чем заданные
+ в 
+\family typewriter 
+Makefile
+\family default 
+-е, а заданные в 
+\family typewriter 
+Makefile
+\family default 
+-е -- больший приоритет, чем заданные в переменных окружения.
+ Однако, синтаксис 
+\family typewriter 
+Makefile
+\family default 
+-а позволяет определять в нем параметры, которые нельзя будет перегрузить
+ из командной строки.
+ Параметры, существенные для сборки, рекомендуется определять именно таким
+ образом.
+\layout Subsubsection
+
+Выбор компилятора
+\layout Itemize
+
+Переменная: 
+\family typewriter 
+CL_COMP
+\family default 
+
+\newline 
+Возможные значения: 
+\family typewriter 
+gcc
+\family default 
+, 
+\family typewriter 
+suncc
+\begin_deeper 
+\layout Standard
+
+Если эта переменная не определена, то используемый компилятор определяется
+ требованиями используемых модулей.
+ Если используемые модули не предъявляют однозначных требований (или никакие
+ модули не используются), то будет использован компилятор 
+\family typewriter 
+gcc
+\family default 
+.
+\layout Standard
+
+Если эта переменная определена, то будет использован именно указанный компилятор.
+ Если используемые модули не совместимы с ним, то сборка будет аварийно
+ завершена.
+\layout Standard
+
+В случае, когда файлы, находящиеся в данном каталоге, могут быть собраны
+ только конкретным компилятором, переменную 
+\family typewriter 
+CL_COMP
+\family default 
+ рекомендуется задавать в 
+\family typewriter 
+Makefile
+\family default 
+-е.
+ Во всех остальных случаях рекомендуется задавать эту переменную из командной
+ строки или не задавать вообще (в большинстве случаев система cvslvk обеспечит
+ выбор правильного компилятора).
+\end_deeper 
 \layout Section
 
 Сообщения об ошибках
